--- a/access-binding/access-binding-hive/pom.xml
+++ b/access-binding/access-binding-hive/pom.xml
@@ -43,6 +43,10 @@ limitations under the License.
       <artifactId>hive-builtins</artifactId>
     </dependency>
     <dependency>
+      <groupId>org.apache.hive</groupId>
+      <artifactId>hive-service</artifactId>
+    </dependency>
+    <dependency>
       <groupId>com.cloudera.cdh</groupId>
       <artifactId>access-core</artifactId>
     </dependency>
